--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "cypress": "^3.2.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cypress:open": "./node_modules/.bin/cypress open",
+    "cypress:run": "./node_modules/.bin/cypress run",
+    "cypress": "./node_modules/.bin/cypress"
   },
   "author": "",
   "license": "ISC"
