--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "sw-cypress",
   "version": "1.0.0",
   "description": "",
@@ -10,11 +11,11 @@
     "cypress": "^3.2.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "cypress:open": "./node_modules/.bin/cypress open",
     "cypress:run": "./node_modules/.bin/cypress run",
     "cypress": "./node_modules/.bin/cypress"
   },
-  "author": "",
-  "license": "ISC"
+  "homepage": "https://github.com/leichteckig/sw-cypress#readme",
+  "author": "leichteckig",
+  "license": "MIT"
 }
