--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "cypress": "^3.2.0"
