--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "cypress": "^3.2.0"
+    "cypress": "^3.2.0",
+    "cypress-dark": "^1.7.13"
   },
   "scripts": {
     "cypress:open": "./node_modules/.bin/cypress open",
